--- a/index.html
+++ b/index.html
@@ -1,12 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Static Template</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>html-londn-trip</title>
   </head>
   <body>
-    <h1>This is a static template, there is no bundler or bundling involved!</h1>
+    <!-- titolo -->
+    <header>
+      <h1>Il mio viaggio a Londra</h1>
+
+      <img src="img/pexels-bill-emrich-230794-0.jpg" />
+      <img src="img/pexels-bill-emrich-230794-1.jpg" />
+      <img src="img/pexels-bill-emrich-230794-2.jpg" />
+
+      <hr />
+    </header>
+
+    <!-- sezione Spese -->
+
+    <section>
+      <h2>Le mie spese</h2>
+
+      <table>
+        <tr>
+          <th>Numero</th>
+          <th>Descrizione</th>
+          <th>Costo</th>
+        </tr>
+
+        <tr>
+          <td>1</td>
+          <td>Biglietto Aereo</td>
+          <td>120€</td>
+        </tr>
+
+        <tr>
+          <td>1</td>
+          <td>Biglietto Aereo</td>
+          <td>120€</td>
+        </tr>
+
+        <tr>
+          <td>1</td>
+          <td>Biglietto Aereo</td>
+          <td>120€</td>
+        </tr>
+
+        <tr>
+          <td>Totale</td>
+          <td></td>
+          <td>360€</td>
+        </tr>
+      </table>
+
+      <hr />
+    </section>
+
+    <!--Sezione to do list -->
+
+    <section>
+      <h3>Cose da fare</h3>
+
+      <ul>
+        <li>Visitare la Tower of London &#10008;</li>
+        <li>Visitare Greenwich &#10004;</li>
+        <li>Ascoltare un Artista di Strada &#10004;</li>
+        <li>Mangiare il tipico Fish and Chips inglese &#10008;</li>
+      </ul>
+
+      <hr />
+    </section>
+
+    <!-- sezione info -->
+
+    <section>
+      <h3>Info Utili</h3>
+
+      <ol>
+        <li>
+          Numeri di Emergenza
+          <ul>
+            <li><strong>999</strong> Emergenza</li>
+            <li><strong>101</strong> Numero Polizia</li>
+            <li><strong>111</strong> Numero assistenza medica</li>
+          </ul>
+        </li>
+
+        <li>
+          Numeri di Emergenza
+          <ul>
+            <li><strong>Nome Hotel</strong> Buckingham Palace</li>
+            <li>
+              <strong>Indirizzo Hotel</strong> Buckingham Palace, London SW1A
+              1AA
+            </li>
+            <li><strong>111</strong> Numero assistenza medica</li>
+          </ul>
+        </li>
+
+        <li>
+          Numeri di Emergenza
+          <ul>
+            <li><strong>999</strong> Emergenza</li>
+            <li><strong>101</strong> Numero Polizia</li>
+            <li><strong>111</strong> Numero assistenza medica</li>
+          </ul>
+        </li>
+      </ol>
+    </section>
   </body>
 </html>
